--- a/views/table/datatables.ejs
+++ b/views/table/datatables.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <!-- DataTables css -->
     <link rel="stylesheet" href="/datatables.net-bs/css/dataTables.bootstrap.min.css">
-    <link rel="stylesheet" href="/datatables.net-buttons-bs/css/buttons.bootstrap.min.css"> 
+    <link rel="stylesheet" href="/datatables.net-buttons-bs/css/buttons.bootstrap.min.css">
     <link rel="stylesheet" href="/datatables.net-select-bs/css/select.bootstrap.min.css">
     <link rel="stylesheet" href="/datatables.net-responsive-bs/css/responsive.bootstrap.min.css">
     <!-- custom -->
@@ -44,7 +44,7 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title text-danger">编辑项目 <small> 测试测试</small></h4>
-          </div>  
+          </div>
           <form class="form-horizontal" method="POST" action="#">
             <input type="hidden" name="id">
             <div class="modal-body">
@@ -163,7 +163,7 @@
                 }, {
                     text: '<i class="glyphicon glyphicon-print" title="打印"></i>',
                     extend: 'print'
-                }, 
+                },
                 {
                     text: '<i class="glyphicon glyphicon-save-file" title="导出excel"></i>',
                     extend: 'excel'
@@ -176,7 +176,7 @@
                 }, 'reload','edit'
             ],
             ajax: {
-                url: '/data/test.data',
+                url: '/datatables/data',
                 dataSrc: ''
             },
             columns: [
@@ -196,14 +196,14 @@
                     // visible: false,
                     sortable: false,
                     render: function(data, type, row){
-                        return '<a href="#" title="详情">' + 
-                        '<i class="glyphicon glyphicon-eye-open"></i> ' + 
-                        '</a>'+ 
-                        '<a href="#editProject" data-toggle="modal" data-id="' + row.p_id +'" title="修改">' + 
-                        '<i class="glyphicon glyphicon-pencil"></i> ' + 
+                        return '<a href="#" title="详情">' +
+                        '<i class="glyphicon glyphicon-eye-open"></i> ' +
+                        '</a>'+
+                        '<a href="#editProject" data-toggle="modal" data-id="' + row.p_id +'" title="修改">' +
+                        '<i class="glyphicon glyphicon-pencil"></i> ' +
                         '</a>'+
                         '<a href="#delProject" data-toggle="modal" data-id="' + row.p_id +'" title="删除">' +
-                        '<i class="glyphicon glyphicon-trash text-danger"></i> ' + 
+                        '<i class="glyphicon glyphicon-trash text-danger"></i> ' +
                         '</a>';
                     }
                 }
@@ -220,13 +220,13 @@
 
         // 操作区使用：编辑modal
         $('#editProject').on('show.bs.modal', function(e){
-            var button = $(e.relatedTarget); 
+            var button = $(e.relatedTarget);
             var id = button.data('id');
             $.ajax();   // 编辑操作
         });
         // 操作区使用：删除modal
         $('#delProject').on('show.bs.modal', function(e){
-            var button = $(e.relatedTarget); 
+            var button = $(e.relatedTarget);
             var id = button.data('id');
             $.ajax();   // 删除操作
         });
