--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -37,6 +37,18 @@
                     <li class=""><a href="/datatables">datatables</a></li> -->
                   </ul>
                 </li>
+                <li class="dropdown <%= url=='bootstrap'?'active':'' %>">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">bootstrap 相关 <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <!-- <li><a href="#">Action</a></li> -->
+                    <li class="disabled"><a href="javascript:void(0)">bootstrap 相关插件</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class=""><a href="/bootstrap-datepicker">bootstrap-datepicker</a></li>
+                    <!-- <li class=""><a href="/bootstrap-daterangepicker">bootstrap-daterangepicker</a></li> -->
+                    <!-- <li class=""><a href="/bootstrap-table">bootstrap-table</a></li>
+                    <li class=""><a href="/datatables">datatables</a></li> -->
+                  </ul>
+                </li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div>
