--- a/views/table/bootstrap-table.ejs
+++ b/views/table/bootstrap-table.ejs
@@ -131,7 +131,7 @@
         var $table = $('#table');
         $table.bootstrapTable({
             url: '/bootstrap-table/data',
-            classes: 'table table-bordered table-striped',
+            classes: 'table table-hover table-bordered table-striped text-nowrap',
             toolbar: '#toolbar',
             queryParams: function(params){
               return {
