--- a/views/table/datatables.ejs
+++ b/views/table/datatables.ejs
@@ -176,7 +176,7 @@
                 }, 'reload','edit'
             ],
             ajax: {
-                url: '/datatables/data',
+                url: '/ajax/datatables/data',
                 dataSrc: ''
             },
             columns: [
