--- a/views/table/jquery-tabledit.ejs
+++ b/views/table/jquery-tabledit.ejs
@@ -44,11 +44,11 @@
     <!-- Bootstrap 3.3.7 -->
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- tabledit -->
-    <script src="/markcell/jquery-tabledit/jquery.tabledit.min.js"></script>
+    <script src="/jquery-tabledit/jquery.tabledit.min.js"></script>
     <script>
       $(function(){
         $('.table').Tabledit({
-          url: '/jquery-tabledit/ajax',
+          url: '/ajax/tabledit',
           autoFocus: false,
           // groupClass: 'btn-group btn-group-xs',
           // inputClass: 'form-control input-sm',   // input 最小只能到sm了
