add google analytics

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,9 @@
   <div class="container">
     <p>Web 前端插件文档库示例代码，文档库地址：<a href="https://www.yuque.com/pengloo53/web">https://www.yuque.com/pengloo53/web</a></p>
     <br>
-    <p><h4>介绍</h4></p>
+    <p>
+      <h4>介绍</h4>
+    </p>
     <br>
     <p>如今，随着大前端的发展，曾经的霸主：jQuery 也渐渐的陨落，随之一起没落的，也包含基于 jQuery 的一些优秀的插件。这些优秀的插件，让我们在前端的开发中，节省了大量的时间。自己的项目中也使用了大部分基于 jQuery
       的前端插件，帮助我实现了很多的功能，节省了大量的开发时间。</p>
@@ -36,7 +38,9 @@
       </li>
     </ul>
     <br>
-    <p><h4>部署</h4></p>
+    <p>
+      <h4>部署</h4>
+    </p>
     <br>
     <ol start="1">
       <li>安装 Node 环境
@@ -54,8 +58,7 @@
       <li>浏览器打开项目：<a href="http://localhost:3030">http://localhost:3030</a>
       </li>
     </ol>
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <% include ./layout/footer.ejs %>
 </body>
 
 </html>
