--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">js-plugin-example</a>
+            <a class="navbar-brand" href="/page">js-plugin-example</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -54,5 +54,7 @@
   </nav>
 </div>
 <div class="container">
-  <p class="lead"><a href="<%= link %>" target="_blank"><%= title %></a> <span style="font-size: 0.6em">点击标题查看官方文档</small></p>
+  <p class="lead"><a href="<%= link %>" target="_blank"><%= title %></a>
+    <small style="font-size: 0.6em"><%= linkDesc %></small>
+  </p>
 </div>
