--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                 <li class="md_li"><span>在线演示代码仓库：<a class="md_compiled" target="_blank"
                             href="https://github.com/pengloo53/js-plugin-example">JS 插件文档库示例代码 · GitHub</a>
                     </span></li>
-                <li class="md_li"><span>在线预览：<a class="md_compiled" target="_blank" href="http://js.90byte.com/page">JS 插件在线演示</a>
+                <li class="md_li"><span>在线预览：<a class="md_compiled" href="/page">JS 插件在线演示</a>
                     </span></li>
             </ul>
             <h3 id="toc_1" class="h16">项目介绍</h3>
@@ -105,7 +105,7 @@
 
             <p class="md_block">
                 <span class="md_line md_line_start md_line_end">另外，也提供了<a class="md_compiled"
-                        href="http://js.90byte.com/page">在线预览</a>。</span>
+                        href="/page">在线预览</a>。</span>
             </p>
 
             <h3 id="toc_4" class="h16">本地部署步骤</h3>
