--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -54,7 +54,8 @@
   </nav>
 </div>
 <div class="container">
-  <p class="lead"><a href="<%= link %>" target="_blank"><%= title %></a>
-    <small style="font-size: 0.6em"><%= linkDesc %></small>
-  </p>
+  <h3 class="lead"><%= title %>
+    <small><a class="label label-warning" href="<%= official_link %>" target="_blank">官方地址</a></small>
+    <small><a class="label label-success" href="<%= doc_link %>" target="_blank">文档库地址</a></small>
+  </h3>
 </div>
