--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -40,12 +40,27 @@
                 </ul>
               </li>
               <li class="dropdown <%= url=='jquery'?'active':'' %>">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">jQuery 相关 <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">其他 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <!-- <li><a href="#">Action</a></li> -->
                   <li class="disabled"><a href="javascript:void(0)">校验</a></li>
                   <li class=""><a href="/page/jquery-validation">jquery-validation</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="disabled"><a href="javascript:void(0)">输入框增强</a></li>
+                  <li class=""><a href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a></li>
+                </ul>
+              </li>
+              <li class="dropdown <%= url=='vue'?'active':'' %>">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Vue 专区
+                  <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <!-- <li><a href="#">Action</a></li> -->
+                  <li class="disabled"><a href="javascript:void(0)">敬请期待...</a></li>
+                  <!-- <li class=""><a href="/page/jquery-validation">jquery-validation</a></li> -->
+                  <!-- <li class="disabled"><a href="javascript:void(0)">bootstrap-validate</a></li> -->
                   <!-- <li role="separator" class="divider"></li> -->
+                  <!-- <li class="disabled"><a href="javascript:void(0)">校验</a></li> -->
+                  <!-- <li class=""><a href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a></li> -->
                 </ul>
               </li>
             </ul>
