--- a/views/page.ejs
+++ b/views/page.ejs
@@ -51,6 +51,7 @@
           </div>
           <ul class="list-group">
             <a class="list-group-item" href="/page/jquery-validation">jquery-validation</a>
+            <a class="list-group-item" href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a>
           </ul>
           <div class="panel-footer">敬请期待...</div>
         </div>
