--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -48,6 +48,9 @@
                   <li role="separator" class="divider"></li>
                   <li class="disabled"><a href="javascript:void(0)">输入框增强</a></li>
                   <li class=""><a href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="disabled"><a href="javascript:void(0)">文件上传</a></li>
+                  <li class=""><a href="/page/bootstrap-fileinput">bootstrap-fileinput</a></li>
                 </ul>
               </li>
               <li class="dropdown <%= url=='vue'?'active':'' %>">
