--- a/views/page.ejs
+++ b/views/page.ejs
@@ -47,11 +47,12 @@
         <div class="panel panel-primary">
           <div class="panel-heading">其他</div>
           <div class="panel-body">
-            <p>jQuery 相关插件</p>
+            <p>jQuery & bootstrap 相关插件</p>
           </div>
           <ul class="list-group">
             <a class="list-group-item" href="/page/jquery-validation">jquery-validation</a>
             <a class="list-group-item" href="/page/bootstrap3-typeahead">bootstrap3-typeahead</a>
+            <a class="list-group-item" href="/page/bootstrap-fileinput">bootstrap-fileinput</a>
           </ul>
           <div class="panel-footer">敬请期待...</div>
         </div>
